@@ -8,15 +8,15 @@
  * an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the
  * specific language governing permissions and limitations under the License.
  *
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2022 the original author or authors.
  */
 package org.assertj.core.internal.maps;
 
-import static java.lang.String.CASE_INSENSITIVE_ORDER;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.emptySet;
 import static java.util.Collections.singletonMap;
 import static java.util.Collections.unmodifiableMap;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.assertj.core.api.Assertions.catchThrowable;
 import static org.assertj.core.api.BDDAssertions.then;
@@ -32,53 +32,26 @@ import static org.assertj.core.util.FailureMessages.actualIsNull;
 import static org.assertj.core.util.Sets.set;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
 
-import java.util.HashMap;
-import java.util.IdentityHashMap;
-import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Set;
-import java.util.TreeMap;
-import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 import org.apache.commons.collections4.map.CaseInsensitiveMap;
 import org.apache.commons.collections4.map.SingletonMap;
 import org.apache.commons.lang3.ArrayUtils;
-import org.assertj.core.api.AssertionInfo;
-import org.assertj.core.internal.Maps;
 import org.assertj.core.internal.MapsBaseTest;
+import org.assertj.core.test.jdk11.Jdk11;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.springframework.util.LinkedCaseInsensitiveMap;
 
 import com.google.common.collect.ImmutableMap;
 
 /**
- * Tests for <code>{@link Maps#assertContainsOnlyKeys(AssertionInfo, Map, Object[])}</code>.
- *
  * @author Christopher Arnott
  */
 class Maps_assertContainsOnlyKeys_Test extends MapsBaseTest {
-
-  private static final Supplier<Map<String, String>> CASE_INSENSITIVE_TREE_MAP = () -> new TreeMap<>(CASE_INSENSITIVE_ORDER);
-
-  @SuppressWarnings("unchecked")
-  private static final Supplier<Map<String, String>>[] CASE_INSENSITIVE_MAPS = new Supplier[] {
-      // org.apache.commons.collections4.map.CaseInsensitiveMap not included due to slightly different behavior
-      LinkedCaseInsensitiveMap::new,
-      CASE_INSENSITIVE_TREE_MAP
-  };
-
-  @SuppressWarnings("unchecked")
-  private static final Supplier<Map<String, String>>[] MODIFIABLE_MAPS = ArrayUtils.addAll(CASE_INSENSITIVE_MAPS,
-                                                                                           CaseInsensitiveMap::new,
-                                                                                           HashMap::new,
-                                                                                           IdentityHashMap::new,
-                                                                                           LinkedHashMap::new);
-
-  private static final String ARRAY_OF_KEYS = "array of keys";
 
   @Test
   void should_fail_if_actual_is_null() {
@@ -97,7 +70,7 @@ class Maps_assertContainsOnlyKeys_Test extends MapsBaseTest {
     // WHEN
     Throwable thrown = catchThrowable(() -> maps.assertContainsOnlyKeys(someInfo(), actual, keys));
     // THEN
-    then(thrown).isInstanceOf(NullPointerException.class).hasMessage(keysToLookForIsNull(ARRAY_OF_KEYS));
+    then(thrown).isInstanceOf(NullPointerException.class).hasMessage(keysToLookForIsNull("array of keys"));
   }
 
   @Test
@@ -107,7 +80,7 @@ class Maps_assertContainsOnlyKeys_Test extends MapsBaseTest {
     // WHEN
     Throwable thrown = catchThrowable(() -> maps.assertContainsOnlyKeys(someInfo(), actual, keys));
     // THEN
-    then(thrown).isInstanceOf(IllegalArgumentException.class).hasMessage(keysToLookForIsEmpty(ARRAY_OF_KEYS));
+    then(thrown).isInstanceOf(IllegalArgumentException.class).hasMessage(keysToLookForIsEmpty("array of keys"));
   }
 
   @ParameterizedTest
@@ -129,7 +102,9 @@ class Maps_assertContainsOnlyKeys_Test extends MapsBaseTest {
                      arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))), array("name", "job")),
                      arguments(unmodifiableMap(mapOf(entry("name", "Yoda"), entry("job", "Jedi"))), array("job", "name")),
                      arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), array("name", "job")),
-                     arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), array("job", "name")));
+                     arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"), array("job", "name")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"), array("name", "job")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"), array("job", "name")));
   }
 
   private static Stream<Arguments> modifiableMapsSuccessfulTestCases() {
@@ -161,10 +136,11 @@ class Maps_assertContainsOnlyKeys_Test extends MapsBaseTest {
   })
   void should_fail(Map<String, String> actual, String[] expected, Set<String> notFound, Set<String> notExpected) {
     // WHEN
-    AssertionError error = expectAssertionError(() -> maps.assertContainsOnlyKeys(info, actual, expected));
-    // THEN
-    then(error).as(actual.getClass().getName())
-               .hasMessage(shouldContainOnlyKeys(actual, expected, notFound, notExpected).create());
+    assertThatExceptionOfType(AssertionError.class).as(actual.getClass().getName())
+                                                   .isThrownBy(() -> maps.assertContainsOnlyKeys(info, actual, expected))
+                                                   // THEN
+                                                   .withMessage(shouldContainOnlyKeys(actual, expected,
+                                                                                      notFound, notExpected).create());
   }
 
   private static Stream<Arguments> unmodifiableMapsFailureTestCases() {
@@ -187,7 +163,15 @@ class Maps_assertContainsOnlyKeys_Test extends MapsBaseTest {
                      arguments(ImmutableMap.of("name", "Yoda", "job", "Jedi"),
                                array("name", "color"),
                                set("color"),
-                               set("job")));
+                               set("job")),
+                     arguments(Jdk11.Map.of("name", "Yoda", "job", "Jedi"),
+                               array("name", "color"),
+                               set("color"),
+                               set("job")),
+                     arguments(Jdk11.Map.of("name", "Yoda"),
+                               array((String) null), // implementation not permitting null keys
+                               set((String) null),
+                               set("name")));
   }
 
   private static Stream<Arguments> modifiableMapsFailureTestCases() {
